[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Enemy/Spikes/spikes-fuzzy7.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemy/Spikes/spikes-fuzzy1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemy/Spikes/spikes-fuzzy5.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemy/Spikes/spikes-fuzzy6.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemy/Spikes/spikes-fuzzy8.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Spike.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Active",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ) ],
"loop": true,
"name": "Unleashed",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 1.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.5, 6.25 )

[node name="Spike" type="Node2D"]

[node name="Spike" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 8
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Spike"]
position = Vector2( 1, 0 )
scale = Vector2( 1.5, 1 )
frames = SubResource( 4 )
animation = "Unleashed"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spike"]
visible = false
position = Vector2( 0, 7 )
z_index = 12
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="Spike"]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spike/Area2D"]
position = Vector2( 0, -1.75 )
shape = SubResource( 3 )
one_way_collision_margin = 0.0

[node name="Timer" type="Timer" parent="Spike"]
wait_time = 1.5

[connection signal="body_entered" from="Spike/Area2D" to="Spike" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Spike/Area2D" to="Spike" method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Spike/Timer" to="Spike" method="_on_Timer_timeout"]
